--- a/articles/frontdoor/index.yml
+++ b/articles/frontdoor/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: landing-page
   author: duongau
   ms.author: duau
-  ms.date: 09/09/2020
-  ms.openlocfilehash: 7b7e5cae5e34fceaf3d18c7c90bd9cb8c201eac5
-  ms.sourcegitcommit: 190658142b592db528c631a672fdde4692872fd8
+  ms.date: 06/30/2021
+  ms.openlocfilehash: 82e80e35f666e9819213e9acba6c03608e996957
+  ms.sourcegitcommit: beff1803eeb28b60482560eee8967122653bc19c
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/11/2021
-  ms.locfileid: "112006957"
+  ms.lasthandoff: 07/07/2021
+  ms.locfileid: "113432390"
 landingContent:
 - title: Informationen zu Azure Front Door
   linkLists:
@@ -23,6 +23,10 @@ landingContent:
     links:
     - text: Was ist Azure Front Door?
       url: front-door-overview.md
+  - linkListType: learn
+    links:
+    - text: Einführung in Azure Front Door
+      url: /learn/modules/intro-to-azure-front-door/
 - title: Informationen zu Azure Front Door Standard/Premium (Vorschau)
   linkLists:
   - linkListType: overview
