--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -25,6 +25,8 @@
           href: security-controls-policy.md
         - name: Sicherheitsübersicht
           href: security-overview.md
+        - name: Private Link-Netzwerk
+          href: private-link-security.md
 - name: Anleitungen
   items:
     - name: Bereitstellen
