--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -5,7 +5,7 @@
     - name: Was ist Azure Monitor?
       href: overview.md
     - name: Häufig gestellte Fragen
-      href: faq.md
+      href: faq.yml
     - name: Neuigkeiten
       href: whats-new.md
     - name: Migrieren von Operations Manager
@@ -31,6 +31,8 @@
           href: vm/quick-collect-windows-computer.md
     - name: Überwachen von Anwendungen
       items:
+        - name: ASP.NET Core-Anwendung
+          href: app/dotnet-quickstart.md
         - name: Node.js-Anwendung
           href: app/nodejs-quick-start.md
         - name: Mobile Anwendung
@@ -105,6 +107,8 @@
       href: cli-samples.md
     - name: Azure PowerShell
       href: powershell-samples.md
+    - name: Azure Resource Graph-Abfragen
+      href: ./resource-graph-samples.md
 - name: Konzepte
   items:
     - name: Was können Sie überwachen?
@@ -156,8 +160,20 @@
       items:
         - name: Überwachen einer Azure-Ressource
           href: essentials/monitor-azure-resource.md
-        - name: Überwachen virtueller Azure-Computer
-          href: vm/monitor-vm-azure.md
+        - name: Überwachen virtueller Maschinen
+          items:
+            - name: Übersicht
+              href: vm/monitor-virtual-machine.md
+            - name: Konfigurieren der Überwachung
+              href: vm/monitor-virtual-machine-configure.md
+            - name: Daten analysieren
+              href: vm/monitor-virtual-machine-analyze.md
+            - name: Überwachen der Sicherheit
+              href: vm/monitor-virtual-machine-security.md
+            - name: Erstellen von Warnungen
+              href: vm/monitor-virtual-machine-alerts.md
+            - name: Überwachen von Workloads
+              href: vm/monitor-virtual-machine-workloads.md
           displayname: VM
     - name: Bereitstellen
       items:
@@ -362,7 +378,7 @@
         - name: Übersicht
           href: agents/agents-overview.md
         - name: Häufig gestellte Fragen
-          href: faq.md#agents
+          href: /azure/azure-monitor/faq#agents
         - name: Azure Monitor-Agent
           items:
             - name: Übersicht
@@ -376,10 +392,10 @@
               href: agents/data-collection-rule-azure-monitor-agent.md
             - name: Bedarfsorientiertes Bereitstellen
               displayname: Deploy Azure Monitor agent at scale
-              href: deploy-scale.md#azure-monitor-agent-preview
+              href: deploy-scale.md#azure-monitor-agent
             - name: Häufig gestellte Fragen
               displayname: Azure Monitor agent FAQ
-              href: faq.md#azure-monitor-agent-preview
+              href: /azure/azure-monitor/faq#azure-monitor-agent
         - name: Log Analytics-Agent
           items:
             - name: Übersicht
@@ -629,7 +645,7 @@
         - name: Application Insights-Übersicht
           href: app/app-insights-overview.md
         - name: Häufig gestellte Fragen
-          href: ./faq.md
+          href: /azure/azure-monitor/faq#application-insights
         - name: Codebasierte Überwachung
           items:
             - name: .NET
@@ -738,7 +754,7 @@
                           href: app/java-standalone-sampling-overrides.md
                         - name: Telemetrieprozessoren
                           items:
-                            - name: Übersicht
+                            - name: Überblick
                               href: app/java-standalone-telemetry-processors.md
                             - name: Beispiele
                               href: app/java-standalone-telemetry-processors-examples.md
@@ -763,15 +779,12 @@
                       href: app/status-monitor-v2-troubleshoot.md
                     - name: API-Referenz
                       href: app/status-monitor-v2-api-reference.md
-                    - name: Statusmonitor (Legacy)
-                      displayname: 'IIS monitoring, on premises monitoring, on prem'
-                      href: app/monitor-performance-live-website-now.md
                 - name: Java
                   href: app/java-on-premises.md
         - name: OpenTelemetry
           items:
             - name: Häufig gestellte Fragen
-              href: faq.md#opentelemetry
+              href: /azure/azure-monitor/faq#opentelemetry
         - name: Erstellen einer Ressource (klassisch)
           href: app/create-new-resource.md
         - name: Erstellen einer Ressource (arbeitsbereichsbasiert)
@@ -925,6 +938,8 @@
           items:
             - name: Zugriffssteuerung
               href: app/resources-roles-access-control.md
+            - name: Azure AD-Authentifizierung
+              href: app/azure-ad-authentication.md
             - name: IP-Adressensammlung
               href: app/ip-collection.md
               displayname: 'geolocation, IP collection, IP tracking, IP storage'
@@ -1011,9 +1026,9 @@
         - name: Übersicht
           href: vm/vminsights-overview.md
         - name: 'Allgemeine Verfügbarkeit: häufig gestellte Fragen'
-          href: vm/vminsights-ga-release-faq.md
+          href: vm/vminsights-ga-release-faq.yml
         - name: Häufig gestellte Fragen
-          href: faq.md#vm-insights
+          href: /azure/azure-monitor/faq#vm-insights
         - name: Konfigurieren des Arbeitsbereichs
           href: vm/vminsights-configure-workspace.md
         - name: Installieren von Agents
@@ -1052,8 +1067,6 @@
               href: vm/vminsights-health-troubleshoot.md
         - name: Analysieren von Daten mit Protokollabfragen
           href: vm/vminsights-log-search.md
-        - name: Alerts
-          href: vm/vminsights-alerts.md
         - name: Überwachen von Änderungen
           href: vm/vminsights-change-analysis.md
         - name: Visualisieren von Daten mit Arbeitsmappen
@@ -1067,7 +1080,7 @@
         - name: Übersicht
           href: containers/container-insights-overview.md
         - name: Häufig gestellte Fragen
-          href: faq.md#container-insights
+          href: /azure/azure-monitor/faq#container-insights
         - name: Aktivieren der Überwachung
           items:
             - name: 'Aktivieren der Überwachung: Übersicht'
@@ -1159,7 +1172,7 @@
             - name: Übersicht
               href: insights/sql-insights-overview.md
             - name: Häufig gestellte Fragen
-              href: faq.md#sql-insights-preview
+              href: /azure/azure-monitor/faq#sql-insights-preview
             - name: Aktivieren
               href: insights/sql-insights-enable.md
             - name: Alerts
