--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -12,12 +12,12 @@ metadata:
   title: Language Understanding (LUIS) – Dokumentation
   titleSuffix: Azure Cognitive Services
   description: Mit dem Language Understanding-Dienst (LUIS) kann Ihre Anwendung es verstehen, wenn eine Person Wünsche in ihrer eigenen Sprache äußert. Für LUIS wird das maschinelle Lernen genutzt, um Entwicklern das Erstellen von Anwendungen zu ermöglichen, die Benutzereingaben in natürlicher Sprache empfangen und die Bedeutung entschlüsseln können.
-  ms.openlocfilehash: 49dd98545881df07edb156a4c498531cf2c20781
-  ms.sourcegitcommit: c072eefdba1fc1f582005cdd549218863d1e149e
+  ms.openlocfilehash: d27bdc7522e46953f31347a0c110eb0102f40476
+  ms.sourcegitcommit: 91fdedcb190c0753180be8dc7db4b1d6da9854a1
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/10/2021
-  ms.locfileid: "111966535"
+  ms.lasthandoff: 06/17/2021
+  ms.locfileid: "112284165"
 landingContent:
 - title: Informationen zu Language Understanding (LUIS)
   linkLists:
@@ -138,4 +138,4 @@ landingContent:
     - text: Support- und Hilfeoptionen
       url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/luis/context/context
     - text: Problembehandlung
-      url: troubleshooting.md
+      url: troubleshooting.yml
