--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -12,7 +12,7 @@
     - name: Neues
       href: whats-new.md
     - name: Häufig gestellte Fragen zu LUIS
-      href: troubleshooting.md
+      href: troubleshooting.yml
       displayName: 'Troubleshooting, import'
 - name: LUIS-Schnellstarts
   items:
