--- a/articles/key-vault/certificates/toc.yml
+++ b/articles/key-vault/certificates/toc.yml
@@ -50,7 +50,7 @@
     - name: Integrieren von Key Vault in die DigiCert-Zertifizierungsstelle
       href: how-to-integrate-certificate-authority.md
     - name: 'Problembehandlung: Importieren von Zertifikaten'
-      href: import-cert-faqs.md
+      href: import-cert-faqs.yml
     - name: Exportieren eines Zertifikats aus Key Vault
       href: how-to-export-certificate.md
 - name: Verweis
