--- a/articles/open-datasets/toc.yml
+++ b/articles/open-datasets/toc.yml
@@ -16,7 +16,7 @@
   items:
     - name: Datasets in Azure Machine Learning
       href: how-to-create-azure-machine-learning-dataset-from-open-dataset.md
-- name: Datasets
+- name: Datasetkatalog
   items:
     - name: Datasetkatalog
       href: dataset-catalog.md
