--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -17,7 +17,7 @@
     - name: Kapazitätsgrenzen
       href: sql-data-warehouse-service-capacity-limits.md
     - name: Häufig gestellte Fragen
-      href: sql-data-warehouse-overview-faq.md
+      href: sql-data-warehouse-overview-faq.yml
     - name: Versionshinweise
       items:
         - name: Aktuelles Release
