--- a/articles/active-directory/roles/index.yml
+++ b/articles/active-directory/roles/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.date: 10/19/2020
   author: curtand
   ms.author: curtand
-  ms.openlocfilehash: 8dd6ac6fef0dbc84c77ccacfd048b2af21771f6a
-  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
+  ms.openlocfilehash: 9a01fc386fcf1c100072d8cf813c27f2ba2f0ad1
+  ms.sourcegitcommit: cd8e78a9e64736e1a03fb1861d19b51c540444ad
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96499202"
+  ms.lasthandoff: 06/25/2021
+  ms.locfileid: "112965922"
 landingContent:
 - title: Informationen zu Azure AD-Rollen
   linkLists:
@@ -31,7 +31,7 @@ landingContent:
       url: concept-understand-roles.md
     - text: Grundlegendes zu Verwaltungseinheiten in Azure AD
       url: administrative-units.md
-    - text: Verwenden von Cloudgruppen zum Verwalten von Rollenzuweisungen
+    - text: Verwenden von Gruppen zum Verwalten von Rollenzuweisungen
       url: groups-concept.md
 - title: Erste Schritte
   linkLists:
@@ -65,7 +65,7 @@ landingContent:
     links:
     - text: Erstellen einer Gruppe, der Rollen zugeordnet werden können
       url: groups-create-eligible.md
-    - text: Zuweisen einer Rolle zu einer Cloudgruppe
+    - text: Zuweisen von Rollen zu Gruppen
       url: groups-assign-role.md
     - text: Festlegen einer Gruppe als berechtigt für PIM
       url: groups-pim-eligible.md
