--- a/articles/cloud-services/toc.yml
+++ b/articles/cloud-services/toc.yml
@@ -184,13 +184,13 @@
         - name: Häufig gestellte Fragen zu Cloud Services
           items:
             - name: Häufig gestellte Fragen zur Anwendungs- und Dienstverfügbarkeit
-              href: cloud-services-application-and-service-availability-faq.md
+              href: cloud-services-application-and-service-availability-faq.yml
             - name: Häufig gestellte Fragen zu Konfiguration und Verwaltung
-              href: cloud-services-configuration-and-management-faq.md
+              href: cloud-services-configuration-and-management-faq.yml
             - name: Häufig gestellte Fragen zu Konnektivität und Netzwerken
-              href: cloud-services-connectivity-and-networking-faq.md
+              href: cloud-services-connectivity-and-networking-faq.yml
             - name: Häufig gestellte Fragen zur Bereitstellung
-              href: cloud-services-deployment-faq.md
+              href: cloud-services-deployment-faq.yml
 - name: Verweis
   items:
     - name: Azure CLI
