--- a/articles/confidential-computing/index.yml
+++ b/articles/confidential-computing/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JBCook
   ms.author: jencook
   ms.date: 09/22/2020
-  ms.openlocfilehash: b5d8550c87d56a7deb257b485722f64a5b8f7131
-  ms.sourcegitcommit: ac035293291c3d2962cee270b33fca3628432fac
+  ms.openlocfilehash: e7d63965f45b513e89016525d888549da81791cc
+  ms.sourcegitcommit: cc099517b76bf4b5421944bd1bfdaa54153458a0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/24/2021
-  ms.locfileid: "104955258"
+  ms.lasthandoff: 07/09/2021
+  ms.locfileid: "113551378"
 landingContent:
 - title: Informationen zu Azure Confidential Computing
   linkLists:
@@ -58,7 +58,7 @@ landingContent:
   - linkListType: reference
     links:
     - text: Häufig gestellte Fragen zu virtuellen Computern für Confidential Computing
-      url: faq.md
+      url: faq.yml
     - text: Preise
       url: https://azure.microsoft.com/pricing/details/virtual-machines/linux/#DC1s-C8s%20v2
     - text: Verfügbarkeit
@@ -90,7 +90,7 @@ landingContent:
   - linkListType: reference
     links:
     - text: Häufig gestellte Fragen zu vertraulichen Knoten in AKS
-      url: confidential-nodes-aks-faq.md
+      url: confidential-nodes-aks-faq.yml
     - text: Informationen zu Azure Kubernetes Service (AKS)
       url: ../aks/intro-kubernetes.md
 - title: Vertrauliche Clouddienste
