--- a/articles/marketplace/index.yml
+++ b/articles/marketplace/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: mingshen-ms
   ms.author: mingshen
   ms.date: 06/01/2021
-  ms.openlocfilehash: c4a3d962129dd7acc0d013dd05f482a29752bdd4
-  ms.sourcegitcommit: c072eefdba1fc1f582005cdd549218863d1e149e
+  ms.openlocfilehash: bdc11ff11503c9b661d470eabb404de7093d960c
+  ms.sourcegitcommit: beff1803eeb28b60482560eee8967122653bc19c
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/10/2021
-  ms.locfileid: "111955666"
+  ms.lasthandoff: 07/07/2021
+  ms.locfileid: "113430158"
 landingContent:
 - title: Verwenden des kommerziellen Marketplace
   linkLists:
@@ -28,7 +28,7 @@ landingContent:
     - text: Richtlinien und Nutzungsbedingungen
       url: policies-terms.md
     - text: Häufig gestellte Fragen zum kommerziellen Microsoft-Marketplace
-      url: marketplace-faq-publisher-guide.md
+      url: marketplace-faq-publisher-guide.yml
     - text: Microsoft-Herausgebervereinbarung
       url: /legal/marketplace/msft-publisher-agreement
     - text: Neuigkeiten
@@ -118,7 +118,7 @@ landingContent:
     - text: SaaS-Fulfillment-APIs
       url: partner-center-portal/pc-saas-fulfillment-api-v2.md
     - text: Marketplace-Messungsdienst-APIs
-      url: marketplace-metering-service-apis-faq.md
+      url: marketplace-metering-service-apis-faq.yml
     - text: Berichterstellungs-API (PDF)
       url: https://partneranalytics-api.azureedge.net/partneranalytics-api/Programmatic%20Access%20to%20Commercial%20Marketplace%20Analytics%20Data_v1.pdf
 - title: Support
