--- a/articles/media-services/previous/TOC.yml
+++ b/articles/media-services/previous/TOC.yml
@@ -3,7 +3,7 @@
 - name: Übersicht
   href: media-services-overview.md
   items:
-    - name: Häufige Szenarien
+    - name: Häufige Szenarios
       href: scenarios-and-availability.md
     - name: Regionale Verfügbarkeit
       href: availability-regions-v-2.md
@@ -400,7 +400,7 @@
     - name: Problembehandlung
       items:
         - name: Häufig gestellte Fragen
-          href: media-services-frequently-asked-questions.md
+          href: media-services-frequently-asked-questions.yml
         - name: Anleitung zur Behandlung von Problemen bei Livestreaming
           href: media-services-troubleshooting-live-streaming.md
         - name: Fehlercodes
