--- a/articles/storsimple/TOC.yml
+++ b/articles/storsimple/TOC.yml
@@ -401,7 +401,7 @@
         - name: CSP-Versionshinweise
           href: 'https://partner.microsoft.com/Support/whats-new'
         - name: 'StorSimple für CSP: Häufig gestellte Fragen'
-          href: storsimple-partner-csp-faq.md
+          href: storsimple-partner-csp-faq.yml
 - name: Verwandte Themen
   items:
     - name: StorSimple 5000-7000-Serie
