--- a/articles/azure-resource-manager/templates/index.yml
+++ b/articles/azure-resource-manager/templates/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: mumian
   ms.author: jgao
   ms.date: 03/03/2021
-  ms.openlocfilehash: b3a8448145a101367a2000e5b16d0ff61b93a0d7
-  ms.sourcegitcommit: c072eefdba1fc1f582005cdd549218863d1e149e
+  ms.openlocfilehash: 0f25783d39adb290b372ac87edcb69559143c1a5
+  ms.sourcegitcommit: e1874bb73cb669ce1e5203ec0a3777024c23a486
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/10/2021
-  ms.locfileid: "111963208"
+  ms.lasthandoff: 06/16/2021
+  ms.locfileid: "112202812"
 landingContent:
 - title: Über ARM-Vorlagen
   linkLists:
@@ -30,7 +30,7 @@ landingContent:
     - text: Bewährte Methoden
       url: ./best-practices.md
     - text: Häufig gestellte Fragen
-      url: frequently-asked-questions.md
+      url: frequently-asked-questions.yml
     - text: Vorlagenspezifikationen
       url: template-specs.md
     - text: Bereitstellungsmodi
