--- a/articles/cognitive-services/form-recognizer/breadcrumb/toc.yml
+++ b/articles/cognitive-services/form-recognizer/breadcrumb/toc.yml
@@ -2,10 +2,21 @@
   tocHref: /azure/
   topicHref: /azure/index
   items:
-    - name: Cognitive Services
-      tocHref: /azure/cognitive-services/
-      topicHref: /azure/cognitive-services/index
+    - name: Applied AI Services
+      tocHref: /azure/applied-ai-services/
+      topicHref: /azure/applied-ai-services/index
       items:
         - name: Formularerkennung
           tocHref: /azure/cognitive-services/
+          topicHref: /azure/cognitive-services/form-recognizer/index
+- name: Azure
+  tocHref: /legal/
+  topicHref: /azure/index
+  items:
+    - name: Applied AI Services
+      tocHref: /legal/cognitive-services/form-recognizer
+      topicHref: /azure/applied-ai-services/index
+      items:
+        - name: Formularerkennung
+          tocHref: /legal/cognitive-services/form-recognizer
           topicHref: /azure/cognitive-services/form-recognizer/index
