--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -66,6 +66,8 @@
       href: ./samples/built-in-policies.md
     - name: Integrierte Initiativen
       href: ./samples/built-in-initiatives.md
+    - name: Azure Resource Graph-Abfragen
+      href: ./samples/resource-graph-samples.md
     - name: Verwendungsmuster
       items:
         - name: Logische Operatoren
