--- a/articles/mysql/migrate/mysql-on-premises-azure-db/TOC.yml
+++ b/articles/mysql/migrate/mysql-on-premises-azure-db/TOC.yml
@@ -36,5 +36,25 @@
           href: 13-security.md
         - name: Zusammenfassung
           href: 14-summary.md
-        - name: Anhang
-          href: 15-appendix.md
+    - name: Beispielanwendungen
+      href: 15-appendix.md
+    - name: Ressourcen
+      items:
+        - name: Migrieren von Daten mit „mysqldump“ oder „phpmyadmin“
+          href: ../../concepts-migrate-dump-restore.md
+          displayName: 'migrate, mysqldump'
+        - name: Migrieren von Daten mit dbforge Studio for MySQL
+          href: ../../concepts-migrate-dbforge-studio-for-mysql.md
+          displayName: 'migrate, dbforge'
+        - name: Migrieren von Daten mit MySQL Workbench
+          href: ../../concepts-migrate-import-export.md
+          displayName: 'import , migrate, export'
+        - name: "Migrieren von RDS\_MySQL-Daten mit MySQL Workbench"
+          href: ../../how-to-migrate-rds-mysql-workbench.md
+          displayName: 'import , migrate, export'
+        - name: Migration zu Azure Database for PostgreSQL (Einzelserver) mit minimaler Ausfallzeit
+          href: ../../howto-migrate-online.md
+          displayName: 'migrate, dms, database migration service'
+        - name: Problembehandlung für häufige Fehler
+          href: ../../howto-troubleshoot-common-errors.md
+          displayName: 'SUPER privilege, DBA role, Access is denied'
